--- a/formularios.html
+++ b/formularios.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formularios</title>
-</head>
-<header><h1>Formulario de registro</h1></header>
-<body><p>
-            <label for="nombre">Nombre:</label>
-            <input type="text">
-        <br><br>
+  </head>
 
-            <label for="apellido">Apellido:</label>
-            <input type="text">
-        <br><br>
-        Modalidad de cursada: <input type="radio" name="opciones"> On-demand 
-                            <input type="radio" name="opciones">En vivo
-        <br><br>
-            <label for="mail">Correo:</label>
-            <input type="text">
-        <br><br>
-            <input type="checkbox"> Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.
-            <br><br>
-            <input type="checkbox"> Declaro que leí los términos y condiciones y estoy listo para convertirme en desarrollador web Full Stack.
-            <br><br>
-            <button type="submit">Enviar</button>
-</body></p>
+  <body>
+    <header><h1>Formulario de registro</h1></header>
+    <form>
+      <label for="nombre">Nombre:</label>
+      <input type="text" />
+      <br /><br />
 
+      <label for="apellido">Apellido:</label>
+      <input type="text" />
+      <br /><br />
+      Modalidad de cursada: <input type="radio" name="opciones" /> On-demand
+      <input type="radio" name="opciones" />En vivo <br /><br />
+      <label for="mail">Correo:</label>
+      <input type="text" />
+      <br /><br />
+      <input type="checkbox" /> Deseo recibir información sobre nuevos posteos
+      en la plataforma de Nucba. <br /><br />
+      <input type="checkbox" /> Declaro que leí los términos y condiciones y
+      estoy listo para convertirme en desarrollador web Full Stack. <br /><br />
+      <button type="submit">Enviar</button>
+    </form>
+  </body>
 </html>
