--- a/listas-anidadas.html
+++ b/listas-anidadas.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Listas anidadas</title>
-</head>
-<header><h1>Programación Web Full Stack</h1></header>
-<body><p>
+  </head>
+  <header><h1>Programación Web Full Stack</h1></header>
+  <body>
+    <p></p>
     <h2>Módulos de la cursada</h2>
     <ol>
-        <li>Diseño web:</li>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>GIT y GITHUB</li>
-        </ul>
-        <li>Programación Web:</li>
-        <ul>
-            <li>Javascript</li>
-        </ul>
-        <li>Programación Web Avanzada:</li>
-        <ul>
-            <li>ReactsJs</li>
-        </ul>
-        <li>Backend:</li>
-        <ul>
-            <li>NodeJs</li>
-            <li>Base de Datos</li>
-        </ul>
+      <li>Diseño web:</li>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>GIT y GITHUB</li>
+      </ul>
+      <li>Programación Web:</li>
+      <ul>
+        <li>Javascript</li>
+      </ul>
+      <li>Programación Web Avanzada:</li>
+      <ul>
+        <li>ReactsJs</li>
+      </ul>
+      <li>Backend:</li>
+      <ul>
+        <li>NodeJs</li>
+        <li>Base de Datos</li>
+      </ul>
     </ol>
     <h2>Modalidad de cursada</h2>
-    <h3><ul><li>Contenido en vivo:</h3></li></ul>
-        <ol>
-            <ul>
-                <li>Clases online en zoom</li>
-                <li>Meetups</li>
-                <li>Clases de repaso</li>
+    <h3>
+      <ul>
+        <li>Contenido en vivo:</li>
+      </ul>
+    </h3>
+    <ol>
+      <ul>
+        <li>Clases online en zoom</li>
+        <li>Meetups</li>
+        <li>Clases de repaso</li>
+      </ul>
+    </ol>
+    <h3>
+      <ul>
+        <li>Contenido Teórico-Práctico:</li>
+      </ul>
+    </h3>
+    <ol>
+      <ul>
+        <li>Teórico:</li>
+        <ul>
+          <li>Documentaciones</li>
+          <li>Artículos de interés</li>
         </ul>
-        </ol>
-    <h3><ul><li>Contenido Teórico-Práctico:</li></ul></h3>
-        <ol>
-            <ul>
-                <li>Teórico:</li>
-                <ul>
-                    <li>Documentaciones</li>
-                    <li>Artículos de interés</li>
-                </ul>
-                <li>Práctico:</li>
-                <ul>
-                    <li>Desafíos</li>
-                    <li>Entregas</li>
-                </ul>
-            </ul>
-        </ol>
-
-</body></p>
-
-
-    
-</body>
+        <li>Práctico:</li>
+        <ul>
+          <li>Desafíos</li>
+          <li>Entregas</li>
+        </ul>
+      </ul>
+    </ol>
+  </body>
+  <a href="formularios.html"></a>
 </html>
