--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
     <li>2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
 </ul>
 </body>
-<a href="listas-anidadas.html"></a>
+<a href="listas-anidadas.html">Listas anidadas</a>
 </html>
