--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +27,7 @@
     <li>2022: <strong>Finalissima</strong></li>
     <li>2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
 </ul>
+    <a href="listas-anidadas.html">Listas anidadas</a>
 </body>
-<a href="listas-anidadas.html">Listas anidadas</a>
+
 </html>
