--- a/listas-anidadas.html
+++ b/listas-anidadas.html
@@ -62,6 +62,8 @@
         </ul>
       </ul>
     </ol>
-    <a href="formularios.html">Formularios</a>
+    <nav>
+      <a href="formularios.html">Formularios</a>
+    </nav>
   </body>
 </html>
