--- a/formularios.html
+++ b/formularios.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <header><h1>Formulario de registro</h1></header>
+    <header>
+      <h1>Formulario de registro</h1>
+    </header>
     <form>
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" placeholder="Ingrese su nombre..." />
@@ -43,6 +45,8 @@
       <button type="submit">Enviar</button>
     </form>
     <br /><br />
-    <a href="index.html">Currículum Messi</a>
+    <nav>
+      <a href="index.html">Currículum Messi</a>
+    </nav>
   </body>
 </html>
