--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrega N° 1 - Formularios y listas</title>
-</head>
-<header><h1>Currículum Vitae de Lionel Messi
-</h1>
-</header>
-<body><h2>Datos personales</h2>
-<p>
-<ul>
-    <li>Nombre Completo: <strong>Lionel Andres Messi Cuccittini</li></strong>
-    <li>Fecha de Nacimiento: <strong>24/06/1987</strong></li>
-    <li>Lugar de Nacimiento: <b>Rosario - Argentina</b></li>
-</ul></p>
-<h2>Trayectoria</h2>
-<ul>
-    <li>1994 - 1999: <strong>Newells Old Boys (Inferiores) </strong></li>
-    <li>2000 - 2021: <strong>Barcelona FC</strong></li>
-    <li>2021 - 2023: <strong>Paris Saint Germain</strong></li>
-</ul>
-<h2>Títulos con la Selección</h2>
-<ul>
-    <li>2021: <strong>Copa América Brasil 2021</strong></li>
-    <li>2022: <strong>Finalissima</strong></li>
-    <li>2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
-</ul>
-    <a href="listas-anidadas.html">Listas anidadas</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Currículum Messi</title>
+  </head>
 
+  <body>
+    <header>
+      <h1>Currículum Vitae de Lionel Messi</h1>
+    </header>
+
+    <h2>Datos personales</h2>
+
+    <ul>
+      <li>Nombre Completo: <strong>Lionel Andres Messi Cuccittini</strong></li>
+      <li>Fecha de Nacimiento: <strong>24/06/1987</strong></li>
+      <li>Lugar de Nacimiento: <strong>Rosario - Argentina</strong></li>
+    </ul>
+
+    <h2>Trayectoria</h2>
+
+    <ul>
+      <li>1994 - 1999: <strong>Newells Old Boys (Inferiores) </strong></li>
+      <li>2000 - 2021: <strong>Barcelona FC</strong></li>
+      <li>2021 - 2023: <strong>Paris Saint Germain</strong></li>
+    </ul>
+
+    <h2>Títulos con la Selección</h2>
+
+    <ul>
+      <li>2021: <strong>Copa América Brasil 2021</strong></li>
+      <li>2022: <strong>Finalissima</strong></li>
+      <li>2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
+    </ul>
+
+    <nav>
+      <a href="listas-anidadas.html">Listas anidadas</a>
+    </nav>
+  </body>
 </html>
