--- a/listas-anidadas.html
+++ b/listas-anidadas.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <header><h1>Programación Web Full Stack</h1></header>
+    <header>
+      <h1>Programación Web Full Stack</h1>
+    </header>
     <h2>Módulos de la cursada</h2>
     <ol>
       <li>Diseño web:</li>
@@ -31,37 +33,36 @@
       </ul>
     </ol>
     <h2>Modalidad de cursada</h2>
-    <h3>
-      <ul>
-        <li>Contenido en vivo:</li>
-      </ul>
-    </h3>
-    <ol>
-      <ul>
+    <ul>
+      <li><strong>Contenido en vivo:</strong></li>
+    </ul>
+    <ul>
+      <ul type="circle">
         <li>Clases online en zoom</li>
         <li>Meetups</li>
         <li>Clases de repaso</li>
       </ul>
-    </ol>
-    <h3>
-      <ul>
-        <li>Contenido Teórico-Práctico:</li>
-      </ul>
-    </h3>
-    <ol>
-      <ul>
+    </ul>
+    <ul>
+      <li><strong>Contenido Teórico-Práctico:</strong></li>
+    </ul>
+    <ul>
+      <ul type="circle">
         <li>Teórico:</li>
-        <ul>
+        <ul type="square">
           <li>Documentaciones</li>
           <li>Artículos de interés</li>
         </ul>
+      </ul>
+      <ul type="circle">
         <li>Práctico:</li>
-        <ul>
+        <ul type="square">
           <li>Desafíos</li>
-          <li>Entregas</li>
+          <li>Entrega</li>
         </ul>
       </ul>
-    </ol>
+    </ul>
+    <br />
     <nav>
       <a href="formularios.html">Formularios</a>
     </nav>
